@@ -2,6 +2,7 @@
 
 	* src/rpop3.c: do not disconnect immediately but send QUIT on normal
 	  POP3 errors.
+	  Changed 'Refresh' button/menu to 'Resume'.
 
 2013-01-31
 
